...
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin_medium"
    android:padding="@dimen/padding_small"
    tools:context=".view.DescriptionFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/descr_header"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_medium"
        android:gravity="center"
        android:text="@string/fragment_header"
        android:textStyle="bold"
...
